src/elements/snapshots/panoramix__elements__element_option__tests__either_widget-4.snap
---
source: src/elements/element_option.rs
expression: root_state_5

---
RootWidget(
    Scroll(
        ClipBox(
            Column(
                Label(
                    "Goodbye",
                ),
            ),
        ),
    ),
)
