src/elements/snapshots/panoramix__elements__element_option__tests__either_widget.snap
---
source: src/elements/element_option.rs
expression: root_state

---
RootWidget(
    Scroll(
        ClipBox(
            Column(
                Label(
                    "Hello",
                ),
            ),
        ),
    ),
)
