src/elements/snapshots/panoramix__elements__element_option__tests__new_either-2.snap
---
source: src/elements/element_option.rs
expression: either_elem_data

---
Left(
    LabelData {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
)
