src/elements/snapshots/panoramix__elements__element_option__tests__new_either-3.snap
---
source: src/elements/element_option.rs
expression: either_elem

---
Right(
    Button {
        text: "World",
        flex: FlexParams {
            flex: None,
            alignment: None,
        },
        reserved_widget_id: None,
    },
)
