src/elements/snapshots/panoramix__elements__element_option__tests__new_either.snap
---
source: src/elements/element_option.rs
expression: either_elem

---
Left(
    Label {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
)
