src/elements/snapshots/panoramix__elements__element_option__tests__new_option-2.snap
---
source: src/elements/element_option.rs
expression: option_label_data

---
Some(
    LabelData {
        text: "Hello",
        flex: FlexParams {
            flex: None,
            alignment: None,
        },
    },
)
