src/elements/snapshots/panoramix__elements__element_option__tests__new_option.snap
---
source: src/elements/element_option.rs
expression: option_label

---
Some(
    Label {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
)
