src/elements/snapshots/panoramix__elements__element_option__tests__option_widget-3.snap
---
source: src/elements/element_option.rs
expression: root_state_3

---
RootWidget(
    Scroll(
        ClipBox(
            Column,
        ),
    ),
)
